Introduced Maven profiles for dependency management. Changed dev db instance to use H2 in mem DB. Included Readme.md

--- a/app-service/src/main/resources/application.yaml
+++ b/app-service/src/main/resources/application.yaml
@@ -1,10 +1,6 @@
 spring:
   profiles:
-    active: prod
-  jpa:
-    properties:
-      hibernate:
-        dialect: org.hibernate.dialect.MySQL5InnoDBDialect
+    active: dev
     hibernate:
       ddl-auto: validate
       
@@ -16,15 +12,24 @@ server:
 
 spring:
   profiles: dev
+  jpa:
+    properties:
+      hibernate:
+        dialect: org.hibernate.dialect.H2Dialect
   datasource:
-    url: jdbc:mysql://localhost:3306/devdb?useSSL=false
-    username: root
-    password: admin
+    driver-class-name: org.h2.Driver
+    url: jdbc:h2:mem:devdb;DB_CLOSE_DELAY=-1
+    username: sa
+    password: sa
           
 ---
 
 spring:
   profiles: test
+  jpa:
+    properties:
+      hibernate:
+        dialect: org.hibernate.dialect.MySQL5InnoDBDialect
   datasource:
     url: jdbc:mysql://localhost:3306/testdb?useSSL=false
     username: root
@@ -34,6 +39,10 @@ spring:
 
 spring:
   profiles: prod
+  jpa:
+    properties:
+      hibernate:
+        dialect: org.hibernate.dialect.MySQL5InnoDBDialect
   datasource:
     url: jdbc:mysql://localhost:3306/proddb?useSSL=false
     username: root
